# ruv-fann-mcp1

./: .env  .pids  AGENT_TEST_REPORT.md  AGENT_TEST_SUMMARY.md  ARCHITECTURE.md  BUSINESS_VALUE_FLOW.md  Cargo.toml  EXAMPLE.md  FIX_MCP_ROUTING.md  README.md  SETUP.md  SIMPLE_ARCHITECTURE.md  STATUS.md  SYSTEM_DATA_FLOW.md  TEST_EXECUTION_LOG.md  TEST_RESULTS_SUMMARY.md  build.sh  create-test-data.mjs  create_database.sql  database-validation-test.mjs  final-db-validation.mjs  final_comprehensive_fix.sh  final_working_fix.sh  fix_agent_queries.sh  fix_all_sqlx.sh  fix_coordinator.sh  fix_sqlx_queries.sed  fix_sqlx_syntax.py  init_database.sh  init_database_rust.rs  minimal_working_fix.sh  optimize_database.sql  package-lock.json  package.json  restore_and_fix_everything.sh  ruv_swarm.db  simple-db-test.mjs  start-all.sh  stop-all.sh  swarm_state.db  (+2 more)
.sqlx/: query-303ddd24c9d1cee96612dfa5366938262a64cec7ef819b24f6c4855b8800dfe5.json  query-7aaad51fb1ec4ab6943ff32024509764ee186fa48f3a5761a795e13bcf739bdf.json  query-8a068c11be4c47d27c8cddd2cec1a95216405dfcf47ac1a8f37af1a78fb248ab.json  query-8d2651034e94e891d839ad068a4f3df3b3a69713742b7f9801032fa0a489074c.json  query-8e7437800287111ad596d15cfdb26682a07e7ce2ac5f86e38d178e59e8baf811.json  query-a0ed441f382fd41ae3a42573fdc2b939cdd58ad687379b2fa62448d09adbb0af.json  query-a214df7eec66d5d21a1a03312d0b09ea2a25a0d9dff72ec03c78afd850b1046b.json  query-fd12467770761254fbf9bc12805376f766c6b57ddbb884dcf1e636303e9e0bf4.json
backup/: agent.rs.bak
core/: Cargo.toml
core/src/: api.rs  main.rs  network.rs
examples/: demo-simple.sh  demo.sh
mcp-server/: .env.example  .env.test  BUSINESS_METRICS_REPORT.md  README.md  business-metrics-test.js  database-validation-test.mjs  developer-time-savings-test.js  jest.config.js  metrics-dashboard.js  package-lock.json  package.json  test-mcp.js  test-server.js  time-savings-dashboard.js  train-network.js  tsconfig.json  vitest.config.ts
mcp-server/data/: gcp-patterns.db  patterns.db
mcp-server/src/: index.ts
mcp-server/src/analyzers/: sql-analyzer.ts
mcp-server/src/clients/: gcp-mcp-client.ts  ruv-fann-client.ts
mcp-server/src/interceptors/: tool-interceptor.ts
mcp-server/src/learners/: pattern-learner.ts
mcp-server/src/predictors/: gcp-predictor.ts  pattern-predictor.ts
mcp-server/src/storage/: gcp-pattern-storage.ts
mcp-server/src/tools/: gcp-tools.ts
mcp-server/src/training/: neural-network-trainer.ts  training-data-generator.ts
mcp-server/test-reports/: comprehensive-report.json  metrics.csv  report.html  test-execution-summary.md
mcp-server/tests/: README.md  TESTING_IMPROVEMENTS_SUMMARY.md  TESTING_STRATEGY.md  VITEST_MIGRATION.md  agent-test-scenarios.md  setup.ts
mcp-server/tests/config/: test-environment.json
mcp-server/tests/contracts/: gcp-mcp-backend.contract.test.ts  ruv-fann-api.contract.test.ts
mcp-server/tests/fixtures/: bigquery-failure-logs.json  test-data-generator.ts
mcp-server/tests/integration/: accuracy-validation-test.js  accuracy.test.ts  business-value-test.js  end-to-end-test.js  end-to-end.test.ts  mcp-test-client.js
mcp-server/tests/mocks/: mock-gcp-backend.js
mcp-server/tests/performance/: benchmark-report.json  benchmark.js  performance.test.ts
mcp-server/tests/property/: README.md  pattern-matching.property.test.ts  predictor.property.test.ts
mcp-server/tests/reports/: test-results-dashboard.js
mcp-server/tests/scenarios/: bigquery-test-scenarios.js
model/: Cargo.toml
model/src/: forecast.rs  main.rs
swarm/: Cargo.toml  Cargo_fixed.toml  Cargo_minimal.toml
swarm/migrations/: 001_create_agents.sql  20240706_001_comprehensive_setup.sql
swarm/src/: agent.rs  agent.rs.orig  agent.rs.rej  agent_backup.rs  agent_current.rs  agent_fix_types.patch  agent_minimal.rs  agent_optimized.rs  api.rs  api_fix.patch  api_minimal.rs  coordinator.rs  main.rs  sqlx_fix.patch
wasm/: Cargo.toml  build.sh  index.html
wasm/src/: lib.rs
(+21 files in other folders)
