[workspace]
members = [
    "core",
    "swarm",
    "model",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["ruv-FANN POC"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math
ndarray = { version = "0.16", features = ["serde"] }
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# WASM dependencies
wasm-bindgen = "0.2"
web-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = "fat"