[package]
name = "ruv-fann-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ndarray.workspace = true
rand.workspace = true
anyhow.workspace = true
lazy_static = "1.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "ruv-fann-core"
path = "src/main.rs"