[package]
name = "ruv-model"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ndarray.workspace = true
anyhow.workspace = true
lazy_static = "1.5"

[[bin]]
name = "model-server"
path = "src/main.rs"