[package]
name = "ruv-swarm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
anyhow.workspace = true
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "ruv-swarm"
path = "src/main.rs"