[package]
name = "ruv-swarm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
anyhow.workspace = true
ndarray.workspace = true
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
md5 = "0.7"
lazy_static = "1.5"
rand.workspace = true

[features]
default = ["with-database"]
with-database = []

[[bin]]
name = "ruv-swarm"
path = "src/main.rs"
