[package]
name = "ruv-fann-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.ndarray]
version = "0.16"
default-features = false

[profile.release]
opt-level = "z"
lto = true